xopgi/ql/lang/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD_CLASS
    KEYWORD_INSTANCE

Grammar

Rule 0     S' -> program
Rule 1     expr_factor -> expr_factor SPACE expr_factor
Rule 2     expr_term9 -> expr_factor infix_operator_9 expr_term9
Rule 3     expr_term9 -> expr_factor
Rule 4     expr_term7 -> expr_term7 infix_operator_7 expr_term9
Rule 5     expr_term7 -> expr_term9
Rule 6     expr_term6 -> expr_term6 infix_operator_6 expr_term7
Rule 7     expr_term6 -> expr_term7
Rule 8     expr_term2 -> expr_term2 infix_operator_2 expr_term6
Rule 9     expr_term2 -> expr_term6
Rule 10    expr_term0 -> expr infix_operator_0 expr_term0
Rule 11    expr_term0 -> expr_term2
Rule 12    st_expr -> expr
Rule 13    expr -> expr_term0
Rule 14    expr_factor -> literal
Rule 15    expr_factor -> identifier
Rule 16    expr_factor -> enclosed_expr
Rule 17    expr_factor -> unit_value
Rule 18    expr_factor -> letexpr
Rule 19    expr_factor -> where_expr
Rule 20    expr_factor -> lambda_expr
Rule 21    st_type_expr -> type_expr
Rule 22    literal -> number
Rule 23    literal -> concrete_number
Rule 24    literal -> string
Rule 25    literal -> char
Rule 26    literal -> date
Rule 27    literal -> datetime
Rule 28    literal -> date_interval
Rule 29    literal -> datetime_interval
Rule 30    date -> DATE
Rule 31    datetime -> DATETIME
Rule 32    date_interval -> DATE_INTERVAL
Rule 33    datetime_interval -> DATETIME_INTERVAL
Rule 34    unit_value -> LPAREN RPAREN
Rule 35    char -> CHAR
Rule 36    string -> STRING
Rule 37    identifier -> _identifier
Rule 38    _identifier -> UNDER_IDENTIFIER
Rule 39    _identifier -> UPPER_IDENTIFIER
Rule 40    _identifier -> LOWER_IDENTIFIER
Rule 41    enclosed_expr -> LPAREN expr RPAREN
Rule 42    expr_factor -> enclosed_expr expr_factor
Rule 43    expr_factor -> expr_factor enclosed_expr
Rule 44    enclosed_expr -> LPAREN DOT_OPERATOR RPAREN
Rule 45    enclosed_expr -> LPAREN operator RPAREN
Rule 46    infix_operator_9 -> DOT_OPERATOR
Rule 47    infix_operator_7 -> STAR
Rule 48    infix_operator_7 -> SLASH
Rule 49    infix_operator_7 -> DOUBLESLASH
Rule 50    infix_operator_7 -> PERCENT
Rule 51    infix_operator_6 -> PLUS
Rule 52    infix_operator_6 -> MINUS
Rule 53    infix_operator_2 -> OPERATOR
Rule 54    infix_operator_2 -> ARROW
Rule 55    infix_operator_0 -> TICK_OPERATOR
Rule 56    operator -> infix_operator_0
Rule 57    operator -> infix_operator_2
Rule 58    operator -> infix_operator_6
Rule 59    operator -> infix_operator_7
Rule 60    number -> BASE10_INTEGER
Rule 61    number -> BASE16_INTEGER
Rule 62    number -> BASE8_INTEGER
Rule 63    number -> BASE2_INTEGER
Rule 64    number -> FLOAT
Rule 65    concrete_number -> number ANNOTATION string
Rule 66    concrete_number -> number ANNOTATION char
Rule 67    concrete_number -> number ANNOTATION identifier
Rule 68    empty -> <empty>
Rule 69    lambda_expr -> BACKSLASH parameters ARROW expr
Rule 70    parameters -> _identifier _parameters
Rule 71    _parameters -> SPACE _identifier _parameters
Rule 72    _parameters -> empty
Rule 73    pattern -> parameters
Rule 74    equation -> pattern EQ expr
Rule 75    equations -> equation _equation_set
Rule 76    _equation_set -> PADDING equation _equation_set
Rule 77    _equation_set -> empty
Rule 78    letexpr -> KEYWORD_LET SPACE equations KEYWORD_IN SPACE st_expr
Rule 79    where_expr -> expr KEYWORD_WHERE SPACE equations
Rule 80    where_expr -> expr KEYWORD_WHERE PADDING equations
Rule 81    type_expr -> type_function_expr
Rule 82    type_expr -> type_term
Rule 83    type_function_expr -> type_term ARROW _maybe_padding type_function_expr
Rule 84    type_function_expr -> type_term
Rule 85    type_term -> type_app_expression
Rule 86    type_term -> type_factor
Rule 87    type_app_expression -> type_factor _app_args_non_empty
Rule 88    _app_args -> SPACE type_factor _app_args
Rule 89    _app_args_non_empty -> SPACE type_factor _app_args
Rule 90    _app_args -> empty
Rule 91    type_variable -> LOWER_IDENTIFIER
Rule 92    type_cons -> UPPER_IDENTIFIER
Rule 93    type_factor -> type_variable
Rule 94    type_factor -> type_cons
Rule 95    type_factor -> LPAREN _maybe_padding type_expr _maybe_padding RPAREN
Rule 96    type_factor -> LBRACKET _maybe_padding type_expr _maybe_padding RBRACKET
Rule 97    _maybe_padding -> PADDING
Rule 98    _maybe_padding -> empty
Rule 99    program -> definitions
Rule 100   definitions -> definition _definition_set
Rule 101   _definition_set -> PADDING definition _definition_set
Rule 102   _definition_set -> empty
Rule 103   definition -> nametype_decl
Rule 104   definition -> valuedef
Rule 105   definition -> datatype_definition
Rule 106   valuedef -> equation
Rule 107   nametype_decl -> _identifier COLON COLON st_type_expr
Rule 108   datatype_definition -> _datatype_lhs EQ _data_rhs
Rule 109   _datatype_lhs -> KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
Rule 110   _cons_params -> SPACE LOWER_IDENTIFIER _cons_params
Rule 111   _cons_params -> empty
Rule 112   _data_rhs -> data_cons _data_conses
Rule 113   _data_conses -> _maybe_padding PIPE data_cons _data_conses
Rule 114   _data_conses -> empty
Rule 115   data_cons -> _data_cons
Rule 116   _data_cons -> UPPER_IDENTIFIER _cons_args
Rule 117   _cons_args -> SPACE cons_arg _cons_args
Rule 118   _cons_args -> empty
Rule 119   cons_arg -> type_variable
Rule 120   cons_arg -> type_cons
Rule 121   cons_arg -> _cons_arg_factor
Rule 122   _cons_arg_factor -> LPAREN type_expr RPAREN
Rule 123   _cons_arg_factor -> LBRACKET type_expr RBRACKET

Terminals, with rules where they appear

ANNOTATION           : 65 66 67
ARROW                : 54 69 83
BACKSLASH            : 69
BASE10_INTEGER       : 60
BASE16_INTEGER       : 61
BASE2_INTEGER        : 63
BASE8_INTEGER        : 62
CHAR                 : 35
COLON                : 107 107
DATE                 : 30
DATETIME             : 31
DATETIME_INTERVAL    : 33
DATE_INTERVAL        : 32
DOT_OPERATOR         : 44 46
DOUBLESLASH          : 49
EQ                   : 74 108
FLOAT                : 64
KEYWORD_CLASS        : 
KEYWORD_DATA         : 109
KEYWORD_IN           : 78
KEYWORD_INSTANCE     : 
KEYWORD_LET          : 78
KEYWORD_WHERE        : 79 80
LBRACKET             : 96 123
LOWER_IDENTIFIER     : 40 91 110
LPAREN               : 34 41 44 45 95 122
MINUS                : 52
OPERATOR             : 53
PADDING              : 76 80 97 101
PERCENT              : 50
PIPE                 : 113
PLUS                 : 51
RBRACKET             : 96 123
RPAREN               : 34 41 44 45 95 122
SLASH                : 48
SPACE                : 1 71 78 78 79 88 89 109 110 117
STAR                 : 47
STRING               : 36
TICK_OPERATOR        : 55
UNDER_IDENTIFIER     : 38
UPPER_IDENTIFIER     : 39 92 109 116
error                : 

Nonterminals, with rules where they appear

_app_args            : 88 89
_app_args_non_empty  : 87
_cons_arg_factor     : 121
_cons_args           : 116 117
_cons_params         : 109 110
_data_cons           : 115
_data_conses         : 112 113
_data_rhs            : 108
_datatype_lhs        : 108
_definition_set      : 100 101
_equation_set        : 75 76
_identifier          : 37 70 71 107
_maybe_padding       : 83 95 95 96 96 113
_parameters          : 70 71
char                 : 25 66
concrete_number      : 23
cons_arg             : 117
data_cons            : 112 113
datatype_definition  : 105
date                 : 26
date_interval        : 28
datetime             : 27
datetime_interval    : 29
definition           : 100 101
definitions          : 99
empty                : 72 77 90 98 102 111 114 118
enclosed_expr        : 16 42 43
equation             : 75 76 106
equations            : 78 79 80
expr                 : 10 12 41 69 74 79 80
expr_factor          : 1 1 2 3 42 43
expr_term0           : 10 13
expr_term2           : 8 11
expr_term6           : 6 8 9
expr_term7           : 4 6 7
expr_term9           : 2 4 5
identifier           : 15 67
infix_operator_0     : 10 56
infix_operator_2     : 8 57
infix_operator_6     : 6 58
infix_operator_7     : 4 59
infix_operator_9     : 2
lambda_expr          : 20
letexpr              : 18
literal              : 14
nametype_decl        : 103
number               : 22 65 66 67
operator             : 45
parameters           : 69 73
pattern              : 74
program              : 0
st_expr              : 78
st_type_expr         : 107
string               : 24 65
type_app_expression  : 85
type_cons            : 94 120
type_expr            : 21 95 96 122 123
type_factor          : 86 87 88 89
type_function_expr   : 81 83
type_term            : 82 83 84
type_variable        : 93 119
unit_value           : 17
valuedef             : 104
where_expr           : 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (99) program -> . definitions
    (100) definitions -> . definition _definition_set
    (103) definition -> . nametype_decl
    (104) definition -> . valuedef
    (105) definition -> . datatype_definition
    (107) nametype_decl -> . _identifier COLON COLON st_type_expr
    (106) valuedef -> . equation
    (108) datatype_definition -> . _datatype_lhs EQ _data_rhs
    (38) _identifier -> . UNDER_IDENTIFIER
    (39) _identifier -> . UPPER_IDENTIFIER
    (40) _identifier -> . LOWER_IDENTIFIER
    (74) equation -> . pattern EQ expr
    (109) _datatype_lhs -> . KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
    (73) pattern -> . parameters
    (70) parameters -> . _identifier _parameters

    UNDER_IDENTIFIER shift and go to state 10
    UPPER_IDENTIFIER shift and go to state 11
    LOWER_IDENTIFIER shift and go to state 12
    KEYWORD_DATA    shift and go to state 14

    program                        shift and go to state 1
    definitions                    shift and go to state 2
    definition                     shift and go to state 3
    nametype_decl                  shift and go to state 4
    valuedef                       shift and go to state 5
    datatype_definition            shift and go to state 6
    _identifier                    shift and go to state 7
    equation                       shift and go to state 8
    _datatype_lhs                  shift and go to state 9
    pattern                        shift and go to state 13
    parameters                     shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (99) program -> definitions .

    $end            reduce using rule 99 (program -> definitions .)


state 3

    (100) definitions -> definition . _definition_set
    (101) _definition_set -> . PADDING definition _definition_set
    (102) _definition_set -> . empty
    (68) empty -> .

    PADDING         shift and go to state 17
    $end            reduce using rule 68 (empty -> .)

    _definition_set                shift and go to state 16
    empty                          shift and go to state 18

state 4

    (103) definition -> nametype_decl .

    PADDING         reduce using rule 103 (definition -> nametype_decl .)
    $end            reduce using rule 103 (definition -> nametype_decl .)


state 5

    (104) definition -> valuedef .

    PADDING         reduce using rule 104 (definition -> valuedef .)
    $end            reduce using rule 104 (definition -> valuedef .)


state 6

    (105) definition -> datatype_definition .

    PADDING         reduce using rule 105 (definition -> datatype_definition .)
    $end            reduce using rule 105 (definition -> datatype_definition .)


state 7

    (107) nametype_decl -> _identifier . COLON COLON st_type_expr
    (70) parameters -> _identifier . _parameters
    (71) _parameters -> . SPACE _identifier _parameters
    (72) _parameters -> . empty
    (68) empty -> .

    COLON           shift and go to state 19
    SPACE           shift and go to state 21
    EQ              reduce using rule 68 (empty -> .)

    _parameters                    shift and go to state 20
    empty                          shift and go to state 22

state 8

    (106) valuedef -> equation .

    PADDING         reduce using rule 106 (valuedef -> equation .)
    $end            reduce using rule 106 (valuedef -> equation .)


state 9

    (108) datatype_definition -> _datatype_lhs . EQ _data_rhs

    EQ              shift and go to state 23


state 10

    (38) _identifier -> UNDER_IDENTIFIER .

    COLON           reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    SPACE           reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    EQ              reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    ARROW           reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    PADDING         reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    $end            reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    LPAREN          reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    STAR            reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    SLASH           reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    PERCENT         reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    PLUS            reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    MINUS           reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    OPERATOR        reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)
    RPAREN          reduce using rule 38 (_identifier -> UNDER_IDENTIFIER .)


state 11

    (39) _identifier -> UPPER_IDENTIFIER .

    COLON           reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    SPACE           reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    EQ              reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    ARROW           reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    PADDING         reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    $end            reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    LPAREN          reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    STAR            reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    SLASH           reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    PERCENT         reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    PLUS            reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    MINUS           reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    OPERATOR        reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)
    RPAREN          reduce using rule 39 (_identifier -> UPPER_IDENTIFIER .)


state 12

    (40) _identifier -> LOWER_IDENTIFIER .

    COLON           reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    SPACE           reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    EQ              reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    ARROW           reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    PADDING         reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    $end            reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    LPAREN          reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    STAR            reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    SLASH           reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    PERCENT         reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    PLUS            reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    MINUS           reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    OPERATOR        reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)
    RPAREN          reduce using rule 40 (_identifier -> LOWER_IDENTIFIER .)


state 13

    (74) equation -> pattern . EQ expr

    EQ              shift and go to state 24


state 14

    (109) _datatype_lhs -> KEYWORD_DATA . SPACE UPPER_IDENTIFIER _cons_params

    SPACE           shift and go to state 25


state 15

    (73) pattern -> parameters .

    EQ              reduce using rule 73 (pattern -> parameters .)


state 16

    (100) definitions -> definition _definition_set .

    $end            reduce using rule 100 (definitions -> definition _definition_set .)


state 17

    (101) _definition_set -> PADDING . definition _definition_set
    (103) definition -> . nametype_decl
    (104) definition -> . valuedef
    (105) definition -> . datatype_definition
    (107) nametype_decl -> . _identifier COLON COLON st_type_expr
    (106) valuedef -> . equation
    (108) datatype_definition -> . _datatype_lhs EQ _data_rhs
    (38) _identifier -> . UNDER_IDENTIFIER
    (39) _identifier -> . UPPER_IDENTIFIER
    (40) _identifier -> . LOWER_IDENTIFIER
    (74) equation -> . pattern EQ expr
    (109) _datatype_lhs -> . KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
    (73) pattern -> . parameters
    (70) parameters -> . _identifier _parameters

    UNDER_IDENTIFIER shift and go to state 10
    UPPER_IDENTIFIER shift and go to state 11
    LOWER_IDENTIFIER shift and go to state 12
    KEYWORD_DATA    shift and go to state 14

    definition                     shift and go to state 26
    nametype_decl                  shift and go to state 4
    valuedef                       shift and go to state 5
    datatype_definition            shift and go to state 6
    _identifier                    shift and go to state 7
    equation                       shift and go to state 8
    _datatype_lhs                  shift and go to state 9
    pattern                        shift and go to state 13
    parameters                     shift and go to state 15

state 18

    (102) _definition_set -> empty .

    $end            reduce using rule 102 (_definition_set -> empty .)


state 19

    (107) nametype_decl -> _identifier COLON . COLON st_type_expr

    COLON           shift and go to state 27


state 20

    (70) parameters -> _identifier _parameters .

    EQ              reduce using rule 70 (parameters -> _identifier _parameters .)
    ARROW           reduce using rule 70 (parameters -> _identifier _parameters .)


state 21

    (71) _parameters -> SPACE . _identifier _parameters
    (38) _identifier -> . UNDER_IDENTIFIER
    (39) _identifier -> . UPPER_IDENTIFIER
    (40) _identifier -> . LOWER_IDENTIFIER

    UNDER_IDENTIFIER shift and go to state 10
    UPPER_IDENTIFIER shift and go to state 11
    LOWER_IDENTIFIER shift and go to state 12

    _identifier                    shift and go to state 28

state 22

    (72) _parameters -> empty .

    EQ              reduce using rule 72 (_parameters -> empty .)
    ARROW           reduce using rule 72 (_parameters -> empty .)


state 23

    (108) datatype_definition -> _datatype_lhs EQ . _data_rhs
    (112) _data_rhs -> . data_cons _data_conses
    (115) data_cons -> . _data_cons
    (116) _data_cons -> . UPPER_IDENTIFIER _cons_args

    UPPER_IDENTIFIER shift and go to state 32

    _data_rhs                      shift and go to state 29
    data_cons                      shift and go to state 30
    _data_cons                     shift and go to state 31

state 24

    (74) equation -> pattern EQ . expr
    (13) expr -> . expr_term0
    (10) expr_term0 -> . expr infix_operator_0 expr_term0
    (11) expr_term0 -> . expr_term2
    (8) expr_term2 -> . expr_term2 infix_operator_2 expr_term6
    (9) expr_term2 -> . expr_term6
    (6) expr_term6 -> . expr_term6 infix_operator_6 expr_term7
    (7) expr_term6 -> . expr_term7
    (4) expr_term7 -> . expr_term7 infix_operator_7 expr_term9
    (5) expr_term7 -> . expr_term9
    (2) expr_term9 -> . expr_factor infix_operator_9 expr_term9
    (3) expr_term9 -> . expr_factor
    (1) expr_factor -> . expr_factor SPACE expr_factor
    (14) expr_factor -> . literal
    (15) expr_factor -> . identifier
    (16) expr_factor -> . enclosed_expr
    (17) expr_factor -> . unit_value
    (18) expr_factor -> . letexpr
    (19) expr_factor -> . where_expr
    (20) expr_factor -> . lambda_expr
    (42) expr_factor -> . enclosed_expr expr_factor
    (43) expr_factor -> . expr_factor enclosed_expr
    (22) literal -> . number
    (23) literal -> . concrete_number
    (24) literal -> . string
    (25) literal -> . char
    (26) literal -> . date
    (27) literal -> . datetime
    (28) literal -> . date_interval
    (29) literal -> . datetime_interval
    (37) identifier -> . _identifier
    (41) enclosed_expr -> . LPAREN expr RPAREN
    (44) enclosed_expr -> . LPAREN DOT_OPERATOR RPAREN
    (45) enclosed_expr -> . LPAREN operator RPAREN
    (34) unit_value -> . LPAREN RPAREN
    (78) letexpr -> . KEYWORD_LET SPACE equations KEYWORD_IN SPACE st_expr
    (79) where_expr -> . expr KEYWORD_WHERE SPACE equations
    (80) where_expr -> . expr KEYWORD_WHERE PADDING equations
    (69) lambda_expr -> . BACKSLASH parameters ARROW expr
    (60) number -> . BASE10_INTEGER
    (61) number -> . BASE16_INTEGER
    (62) number -> . BASE8_INTEGER
    (63) number -> . BASE2_INTEGER
    (64) number -> . FLOAT
    (65) concrete_number -> . number ANNOTATION string
    (66) concrete_number -> . number ANNOTATION char
    (67) concrete_number -> . number ANNOTATION identifier
    (36) string -> . STRING
    (35) char -> . CHAR
    (30) date -> . DATE
    (31) datetime -> . DATETIME
    (32) date_interval -> . DATE_INTERVAL
    (33) datetime_interval -> . DATETIME_INTERVAL
    (38) _identifier -> . UNDER_IDENTIFIER
    (39) _identifier -> . UPPER_IDENTIFIER
    (40) _identifier -> . LOWER_IDENTIFIER

    LPAREN          shift and go to state 56
    KEYWORD_LET     shift and go to state 57
    BACKSLASH       shift and go to state 58
    BASE10_INTEGER  shift and go to state 59
    BASE16_INTEGER  shift and go to state 60
    BASE8_INTEGER   shift and go to state 61
    BASE2_INTEGER   shift and go to state 62
    FLOAT           shift and go to state 63
    STRING          shift and go to state 64
    CHAR            shift and go to state 65
    DATE            shift and go to state 66
    DATETIME        shift and go to state 67
    DATE_INTERVAL   shift and go to state 68
    DATETIME_INTERVAL shift and go to state 69
    UNDER_IDENTIFIER shift and go to state 10
    UPPER_IDENTIFIER shift and go to state 11
    LOWER_IDENTIFIER shift and go to state 12

    expr                           shift and go to state 33
    expr_term0                     shift and go to state 34
    expr_term2                     shift and go to state 35
    expr_term6                     shift and go to state 36
    expr_term7                     shift and go to state 37
    expr_term9                     shift and go to state 38
    expr_factor                    shift and go to state 39
    literal                        shift and go to state 40
    identifier                     shift and go to state 41
    enclosed_expr                  shift and go to state 42
    unit_value                     shift and go to state 43
    letexpr                        shift and go to state 44
    where_expr                     shift and go to state 45
    lambda_expr                    shift and go to state 46
    number                         shift and go to state 47
    concrete_number                shift and go to state 48
    string                         shift and go to state 49
    char                           shift and go to state 50
    date                           shift and go to state 51
    datetime                       shift and go to state 52
    date_interval                  shift and go to state 53
    datetime_interval              shift and go to state 54
    _identifier                    shift and go to state 55

state 25

    (109) _datatype_lhs -> KEYWORD_DATA SPACE . UPPER_IDENTIFIER _cons_params

    UPPER_IDENTIFIER shift and go to state 70


state 26

    (101) _definition_set -> PADDING definition . _definition_set
    (101) _definition_set -> . PADDING definition _definition_set
    (102) _definition_set -> . empty
    (68) empty -> .

    PADDING         shift and go to state 17
    $end            reduce using rule 68 (empty -> .)

    _definition_set                shift and go to state 71
    empty                          shift and go to state 18

state 27

    (107) nametype_decl -> _identifier COLON COLON . st_type_expr
    (21) st_type_expr -> . type_expr
    (81) type_expr -> . type_function_expr
    (82) type_expr -> . type_term
    (83) type_function_expr -> . type_term ARROW _maybe_padding type_function_expr
    (84) type_function_expr -> . type_term
    (85) type_term -> . type_app_expression
    (86) type_term -> . type_factor
    (87) type_app_expression -> . type_factor _app_args_non_empty
    (93) type_factor -> . type_variable
    (94) type_factor -> . type_cons
    (95) type_factor -> . LPAREN _maybe_padding type_expr _maybe_padding RPAREN
    (96) type_factor -> . LBRACKET _maybe_padding type_expr _maybe_padding RBRACKET
    (91) type_variable -> . LOWER_IDENTIFIER
    (92) type_cons -> . UPPER_IDENTIFIER

    LPAREN          shift and go to state 80
    LBRACKET        shift and go to state 81
    LOWER_IDENTIFIER shift and go to state 82
    UPPER_IDENTIFIER shift and go to state 83

    st_type_expr                   shift and go to state 72
    type_expr                      shift and go to state 73
    type_function_expr             shift and go to state 74
    type_term                      shift and go to state 75
    type_app_expression            shift and go to state 76
    type_factor                    shift and go to state 77
    type_variable                  shift and go to state 78
    type_cons                      shift and go to state 79

state 28

    (71) _parameters -> SPACE _identifier . _parameters
    (71) _parameters -> . SPACE _identifier _parameters
    (72) _parameters -> . empty
    (68) empty -> .

    SPACE           shift and go to state 21
    EQ              reduce using rule 68 (empty -> .)
    ARROW           reduce using rule 68 (empty -> .)

    _parameters                    shift and go to state 84
    empty                          shift and go to state 22

state 29

    (108) datatype_definition -> _datatype_lhs EQ _data_rhs .

    PADDING         reduce using rule 108 (datatype_definition -> _datatype_lhs EQ _data_rhs .)
    $end            reduce using rule 108 (datatype_definition -> _datatype_lhs EQ _data_rhs .)


state 30

    (112) _data_rhs -> data_cons . _data_conses
    (113) _data_conses -> . _maybe_padding PIPE data_cons _data_conses
    (114) _data_conses -> . empty
    (97) _maybe_padding -> . PADDING
    (98) _maybe_padding -> . empty
    (68) empty -> .

  ! shift/reduce conflict for PADDING resolved as shift
    PADDING         shift and go to state 88
    $end            reduce using rule 68 (empty -> .)
    PIPE            reduce using rule 68 (empty -> .)

  ! PADDING         [ reduce using rule 68 (empty -> .) ]

    _data_conses                   shift and go to state 85
    _maybe_padding                 shift and go to state 86
    empty                          shift and go to state 87

state 31

    (115) data_cons -> _data_cons .

    PADDING         reduce using rule 115 (data_cons -> _data_cons .)
    PIPE            reduce using rule 115 (data_cons -> _data_cons .)
    $end            reduce using rule 115 (data_cons -> _data_cons .)


state 32

    (116) _data_cons -> UPPER_IDENTIFIER . _cons_args
    (117) _cons_args -> . SPACE cons_arg _cons_args
    (118) _cons_args -> . empty
    (68) empty -> .

    SPACE           shift and go to state 90
    PADDING         reduce using rule 68 (empty -> .)
    PIPE            reduce using rule 68 (empty -> .)
    $end            reduce using rule 68 (empty -> .)

    _cons_args                     shift and go to state 89
    empty                          shift and go to state 91

state 33

    (74) equation -> pattern EQ expr .
    (10) expr_term0 -> expr . infix_operator_0 expr_term0
    (79) where_expr -> expr . KEYWORD_WHERE SPACE equations
    (80) where_expr -> expr . KEYWORD_WHERE PADDING equations
    (55) infix_operator_0 -> . TICK_OPERATOR

  ! shift/reduce conflict for KEYWORD_WHERE resolved as shift
  ! shift/reduce conflict for TICK_OPERATOR resolved as shift
    PADDING         reduce using rule 74 (equation -> pattern EQ expr .)
    $end            reduce using rule 74 (equation -> pattern EQ expr .)
    KEYWORD_IN      reduce using rule 74 (equation -> pattern EQ expr .)
    SPACE           reduce using rule 74 (equation -> pattern EQ expr .)
    DOT_OPERATOR    reduce using rule 74 (equation -> pattern EQ expr .)
    LPAREN          reduce using rule 74 (equation -> pattern EQ expr .)
    STAR            reduce using rule 74 (equation -> pattern EQ expr .)
    SLASH           reduce using rule 74 (equation -> pattern EQ expr .)
    DOUBLESLASH     reduce using rule 74 (equation -> pattern EQ expr .)
    PERCENT         reduce using rule 74 (equation -> pattern EQ expr .)
    PLUS            reduce using rule 74 (equation -> pattern EQ expr .)
    MINUS           reduce using rule 74 (equation -> pattern EQ expr .)
    OPERATOR        reduce using rule 74 (equation -> pattern EQ expr .)
    ARROW           reduce using rule 74 (equation -> pattern EQ expr .)
    RPAREN          reduce using rule 74 (equation -> pattern EQ expr .)
    KEYWORD_WHERE   shift and go to state 93
    TICK_OPERATOR   shift and go to state 94

  ! KEYWORD_WHERE   [ reduce using rule 74 (equation -> pattern EQ expr .) ]
  ! TICK_OPERATOR   [ reduce using rule 74 (equation -> pattern EQ expr .) ]

    infix_operator_0               shift and go to state 92

state 34

    (13) expr -> expr_term0 .

    KEYWORD_WHERE   reduce using rule 13 (expr -> expr_term0 .)
    TICK_OPERATOR   reduce using rule 13 (expr -> expr_term0 .)
    PADDING         reduce using rule 13 (expr -> expr_term0 .)
    $end            reduce using rule 13 (expr -> expr_term0 .)
    KEYWORD_IN      reduce using rule 13 (expr -> expr_term0 .)
    SPACE           reduce using rule 13 (expr -> expr_term0 .)
    DOT_OPERATOR    reduce using rule 13 (expr -> expr_term0 .)
    LPAREN          reduce using rule 13 (expr -> expr_term0 .)
    STAR            reduce using rule 13 (expr -> expr_term0 .)
    SLASH           reduce using rule 13 (expr -> expr_term0 .)
    DOUBLESLASH     reduce using rule 13 (expr -> expr_term0 .)
    PERCENT         reduce using rule 13 (expr -> expr_term0 .)
    PLUS            reduce using rule 13 (expr -> expr_term0 .)
    MINUS           reduce using rule 13 (expr -> expr_term0 .)
    OPERATOR        reduce using rule 13 (expr -> expr_term0 .)
    ARROW           reduce using rule 13 (expr -> expr_term0 .)
    RPAREN          reduce using rule 13 (expr -> expr_term0 .)


state 35

    (11) expr_term0 -> expr_term2 .
    (8) expr_term2 -> expr_term2 . infix_operator_2 expr_term6
    (53) infix_operator_2 -> . OPERATOR
    (54) infix_operator_2 -> . ARROW
